# FTP

./: .env.example  CMakeLists.txt  README  client.py  client_test  config.py  dbScript.db  db_seed.py  fileclient  fileshare.db  requirements.txt  server.py  streamlit_drive.py  streamlit_ui.py  tmp_hash  tmp_hash.cpp  user_account.txt
.cache/clangd/index/: ClientSession.cpp.D1FFF67580509C70.idx  ClientSession.hpp.7656FA3C7035619C.idx  Db.hpp.58C8F222DEA661AA.idx  DbSqlite.cpp.3139A11D91D01F0E.idx  DbSqlite.hpp.C803157E8E838E57.idx  FileServer.cpp.DECE6559AC7E008D.idx  FileServer.hpp.D61F1BC9CF7C8D07.idx  Logger.cpp.CC97AD1B1AD19A10.idx  Logger.hpp.366072FF472A9BB2.idx  LoginWindow.cpp.1D240A150BCAF018.idx  LoginWindow.hpp.F5E7549BEB51C59E.idx  MainWindow.cpp.A19B60D6EBEBF8F8.idx  MainWindow.hpp.9A8B53BF43C416D7.idx  NetworkClient.cpp.944BC5F753969659.idx  NetworkClient.hpp.EFE129F32272CBC3.idx  (+8 more)
client/: LoginWindow.cpp  LoginWindow.hpp  MainWindow.cpp  MainWindow.hpp  NetworkClient.cpp  NetworkClient.hpp  client_test.cpp  main.cpp
common/: Protocol.cpp  Protocol.hpp  Utils.cpp  Utils.hpp
data/tiep/: TerminalDeepSomaticWES.txt  user_account.txt
data/tiep123/: user_account.txt
data/tum11/: TransactionafterAuction (4).txt  account.txt  requirements.txt  test.txt  user_account.txt  user_accounttttttttttttt.txt
server/: ClientSession.cpp  ClientSession.hpp  Db.hpp  DbSqlite.cpp  DbSqlite.hpp  FileServer.cpp  FileServer.hpp  Logger.cpp  Logger.hpp  QuotaManager.cpp  QuotaManager.hpp  main.cpp
storage/tiep/: 02_Nguyen_Khac_Tiep_Nguyen_Kim_Ngoc.pptx
(+4 files in other folders)
